--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@
 # production
 /dist
 
+# environment variables
+.env
+
 # misc
 .DS_Store
 .env.local
@@ -29,3 +32,7 @@ yarn-error.log*
 
 # Optional eslint cache
 .eslintcache
+
+# Docker
+Dockerfile
+docker-compose.yml
